--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<html>
 
+  <body>
+    <h1>This is Subdomain</h2>
+    <style>
+      background-color: blue;
+      color: #fff;
+    </style>
+  </body>
+ </html>
+    
